<resources>
    <string name="app_name">Quizinator</string>

    <string name="game_time">Game Time</string>
    <string name="card_type">Card Type(s)</string>
    <string name="semicolon">:</string>
    <string name="start_game">Start Game</string>
    <string name="no_time">00</string>
    <string name="min">05</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="quiz_bowl_rules">Quiz Bowl Rules</string>
    <string name="card_count">Card Count</string>
    <string name="card_time">Card Time</string>
    <string name="default_secs">15</string>

    <string name="new_game">New Game</string>
    <string name="solo_game">Solo Game</string>
    <string name="join_game">Join Game</string>
    <string name="host_game">Host Game</string>
    <string name="highscores">High Scores</string>
    <string name="cards">Cards</string>

    <string name="game_over">Game Over</string>
    <string name="results">Results</string>
    <string name="main_menu">Main Menu</string>

    <string name="enabling_wifi">Enabling Wifi…</string>
    <string name="p2p_off_warning">P2P is disabled</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="empty" />
    <string name="group_owner_text">"Am I the Group Owner?"</string>
    <string name="client_text">This device will act as a client. Click on Start Chatting button</string>
    <string name="connect_peer_button">Connect</string>
    <string name="disconnect_peer_button">Disconnect</string>
    <string name="start_chat_button">Send Message</string>
    <string name="empty_message">No devices found. Make sure P2P is enabled.</string>
    <string name="label_me">Me</string>
    <string name="label_peers">Players</string>
    <string name="moderator_needed_filter">Moderator Needed</string>

    <string-array name="card_type_array">
        <item>True/False</item>
        <item>Multiple Choice</item>
        <item>Both</item>
    </string-array>

    <string-array name="card_sort_list">
        <item>Sort by…</item>
        <item>Question</item>
        <item>Points</item>
        <item>Last Modified</item>
    </string-array>

    <string name="wifi_direct_disabled">WiFi Direct Disabled, please re-enable.</string>
    <string name="host_game_game_settings">Game Settings</string>

    <string name="btn_disconnect_all">Disconnect All</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send_card">Send Card</string>
    <string name="double_edge">High Risk!</string>
    <string name="end_game">End Game</string>
    <string name="question">Question</string>
    <string name="double_edge_notifier">High Risk!</string>

    <string name="hs_score">Score:</string>
    <string name="hs_time">Time</string>
    <string name="hs_deck">Deck</string>

    <string name="deck_name">Deck Name</string>
    <string name="deck_size">Deck Size</string>
    <string name="MC_count">MC: 0</string>
    <string name="TF_count">TF: 0</string>
    <string name="FR_count">FR: 0</string>
    <string name="VR_count">VR: 0</string>
    <string name="new_deck">New Deck</string>
    <string name="available_cards">Available Cards</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="Delete">Delete</string>
    <string name="select_deck">Select Deck</string>
    <string name="select_ruleset">Select Ruleset</string>

    <string name="type">Type</string>
    <string name="points">Points</string>
    <string name="answer">Answer</string>

    <string name="_true">true</string>
    <string name="_false">false</string>
    <string name="capital_true">True</string>
    <string name="capital_false">False</string>

    <string name="nav_bar_check_p2p_compliance">Check P2P Compatibility</string>
    <string name="nav_bar_edit_decks">Edit Decks</string>
    <string name="nav_bar_edit_cards">Edit Cards</string>
    <string name="nav_bar_help">Help</string>
    <string name="nav_bar_help_singleplayer">Singleplayer</string>
    <string name="nav_bar_help_multi_host">Multiplayer: Host</string>
    <string name="nav_bar_help_multi_player">Multiplayer: Player</string>
    <string name="nav_bar_help_custom">Decks and Cards</string>
    <string name="nav_bar_help_rules">Advanced Rules</string>
    <string name="next_card">Next Card</string>
    <string name="shuffle">Shuffle</string>
    <string name="score_label">Score:</string>
    <string name="total_cards_label">Total Cards:</string>
    <string name="high_score_label">High Score:</string>
    <string name="high_score_time_label">High Score Time:</string>
    <string name="time_elapsed_label">Time Elapsed:</string>

    <string name="correct_answer">Answer</string>
    <string name="wrong_answer">Wrong</string>
    <string name="default_card_points">1</string>
    <string name="current_card">Current Card</string>
    <string name="correct_answer_label">Correct Answer(s)</string>

    <!--ANSWER FRAGMENT BUTTONS-->
    <string name="frag_answer_buzzer">Buzz In</string>
    <string name="frag_answer_submit">Submit</string>
    <string name="frag_answer_A">A</string>
    <string name="frag_answer_B">B</string>
    <string name="frag_answer_C">C</string>
    <string name="frag_answer_D">D</string>
    <string name="player_answer">Answer</string>
    <string name="response_time">Response Time</string>
    <string name="solo_play_card_count_warning">*Free and Verbal Response cards can\'t be used in Solo Play</string>

    <string name="create_wager">Set Your Wager</string>
    <string name="note">Note:</string>
    <string name="wager_text_min">A blank wager is zero points</string>
    <string name="wager_text_max">A wager higher than your score wagers all your points</string>
    <string name="accept">Accept</string>
    <string name="wager">Wager:</string>
    <string name="player_wagers">Wagers:</string>
    <string name="double_edge_sword_questions">Double Edge Sword Questions</string>
    <string name="wager_final_question">Wager Final Question</string>
    <string name="allow_multiple_winners">Allow Multiple Winners</string>

    <string name="sharing_send_to">Send to…</string>
    <string name="initial_score">Score: 0</string>
    <string name="initial_game_time">Game Time: 00:00</string>
    <string name="initial_time_left">Time Left: 00.00</string>
    <string name="other_players_title">Other Players</string>>
</resources>
