<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:layout_centerInParent="true"
    tools:context="com.seniordesign.wolfpack.quizinator.Activities.MainMenuActivity">
    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:targetApi="lollipop"
        android:minHeight="?attr/actionBarSize">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="show Links"
            android:onClick="showNavBar"/>
    </Toolbar>
    <ListView
        android:layout_gravity="left"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

    </ListView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Quizinator"
        android:textStyle="bold"
        android:textSize="32dp"
        android:layout_above="@+id/newGameButton"
        android:layout_centerHorizontal="true" />
    <Button
        android:id="@+id/newGameButton"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Game"
        android:onClick="showGameSettings"
        />
</RelativeLayout>
