...
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="1"-->
            <!--android:entries="@array/moderator_needed_array" />-->
    </LinearLayout>
    <ListView
        android:id="@+id/list_of_cards"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>

